--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.2.1",
     "pinia": "^3.0.1",
     "quasar": "^2.16.0",
+    "uuid": "^11.1.0",
     "vue": "^3.4.18",
     "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.0"
